--- a/ADSB-Sniffer/src/main/res/layout/fragment_about.xml
+++ b/ADSB-Sniffer/src/main/res/layout/fragment_about.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="12dp">
 
     <LinearLayout
+        android:id="@+id/layout_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="12dp"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:padding="12dp">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -18,9 +19,9 @@
             android:orientation="vertical">
 
             <TextView
+                style="@android:style/TextAppearance.Large"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@android:style/TextAppearance.Large"
                 android:text="@string/app_name" />
 
             <TextView
@@ -36,64 +37,69 @@
             android:orientation="vertical">
 
             <ImageView
-                android:adjustViewBounds="true"
+                android:id="@+id/image_disco_logo"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/disco_lab_logo"
+                android:adjustViewBounds="true"
                 android:contentDescription="Disco logo"
-                android:id="@+id/image_disco_logo"
-                android:scaleType="fitStart" />
+                android:scaleType="fitStart"
+                android:src="@drawable/disco_lab_logo" />
 
             <TextView
-                android:padding="3dp"
+                android:id="@+id/text_disco_page"
+                style="@android:style/TextAppearance.Medium"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:text="disco.cs.uni-kl.de"
-                style="@android:style/TextAppearance.Medium"
-                android:id="@+id/text_disco_page" />
+                android:padding="3dp"
+                android:text="disco.cs.uni-kl.de" />
         </LinearLayout>
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="12dp">
+        android:layout_below="@id/layout_header"
+        android:padding="12dp"
+        android:text="@string/developer" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".7"
-            style="@android:style/TextAppearance.Medium"
-            android:text="@string/developer" />
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="@android:style/TextAppearance.Medium"
-            android:text="Markus Gräb\nm_graeb11@cs.uni-kl.de"
-            android:id="@+id/text_email1" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/text_email1"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="12dp">
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/layout_header"
+        android:padding="12dp"
+        android:text="Markus Gräb\nm_graeb11@cs.uni-kl.de" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".7"
-            style="@android:style/TextAppearance.Medium"
-            android:text="@string/contact" />
+    <TextView
+        android:id="@+id/text_contact_person"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/text_email1"
+        android:padding="12dp"
+        android:text="@string/contact" />
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            style="@android:style/TextAppearance.Medium"
-            android:text="Matthias Schäfer\nschaefer@cs.uni-kl.de"
-            android:id="@+id/text_email2" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/text_email2"
+        style="@android:style/TextAppearance.Medium"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/text_email1"
+        android:padding="12dp"
+        android:text="Matthias Schäfer\nschaefer@cs.uni-kl.de" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/button_licenses"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/text_email2"
+        android:layout_centerHorizontal="true"
+        android:padding="12dp"
+        android:text="@string/licenses"
+        android:textAlignment="center" />
+
+</RelativeLayout>
